fixed selection marquee overflow

--- a/packages/react-piano-roll/src/components/SelectionMarquee/index.module.scss
+++ b/packages/react-piano-roll/src/components/SelectionMarquee/index.module.scss
@@ -1,3 +1,8 @@
+.marquee-container {
+  position: absolute;
+  inset: 0;
+  overflow: hidden;
+}
 .selection--marquee {
   position: absolute;
   top: var(--top) !important;
